src/ui/sonarr_ui/indexers/snapshots/managarr__ui__sonarr_ui__indexers__test_all_indexers_ui__test_all_indexers_ui_tests__tests__snapshot_tests__test_all_indexers_ui_renders_loading_state.snap
---
source: src/ui/sonarr_ui/indexers/test_all_indexers_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
              ╭  Test All Indexers  ───────────────────────────────────────────────────────────────────╮                
              │                                                                                        │                
              │                                                                                        │                
              │ Loading ...                                                                            │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              │                                                                                        │                
              ╰────────────────────────────────────────────────────────────────────────────────────────╯
